volunteermatch.org (archived on 2002-06-04)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 10735,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 15.69,
  "homepage_snapshot_redirected_domain": "volunteermatch.org",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020402131829id_/http://www.volunteermatch.org/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020402131829id_/http%3A//volunteermatch.org",
  "interval": "2002_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "volunteermatch.org",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020604010004id_/http%3A//www.volunteermatch.org/about/legal/privacy.jsp",
  "policy_title": "VolunteerMatch - About - Privacy Policy",
  "policy_url": "volunteermatch.org/about/legal/privacy.jsp",
  "sha1": "0a42e712d9edb68759241de211007a3c5e79d77e",
  "simhash": 12479379188853263149,
  "simhash_updated": true,
  "site_hostname": "volunteermatch.org",
  "site_url": "http://volunteermatch.org",
  "smog": 16.07,
  "strict_updated": true,
  "timestamp": "20020604010004",
  "word_count": 1610,
  "year": 2002
}

--- a/v/vo/vol/volunteermatch.org.html
+++ b/v/vo/vol/volunteermatch.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the volunteermatch.org privacy policy that was archived on 2001-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011218025803id_/http%3A//www.volunteermatch.org/about/legal/privacy.jsp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the volunteermatch.org privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604010004id_/http%3A//www.volunteermatch.org/about/legal/privacy.jsp) for the most accurate reproduction.-->
 
 <html><head>
 
@@ -26,14 +26,19 @@
 <table cellpadding="0" cellspacing="0" border="0" width="651">
 <tbody><tr>
 <td rowspan="2" width="184" height="67" valign="top"><a href="/"><img border="0" src="/images/header_logo2.gif" width="184" height="67" alt="[VolunteerMatch]" title="VolunteerMatch"></a></td>
-<td width="467">December 17, 2001<br>
-Organizations 18036 | Opportunities 34262 | Referrals 595098</td>
+<td width="467">June 3, 2002<br>
+Organizations 20,332 | Opportunities 37,050 | Referrals 750,510</td>
 </tr>
 <tr>
-<td width="467"><a href="/index.jsp" onmouseover="document.home_img.src='/images/nav_hi_home.gif';" onmouseout="document.home_img.src='/images/nav_grey_home.gif';"><img name="home_img" border="0" src="/images/nav_grey_home.gif" width="51" height="19" alt="[Home]" title="Home"></a><a href="/results/" onmouseover="document.search_img.src='/images/nav_hi_search.gif';" onmouseout="document.search_img.src='/images/nav_grey_search.gif';"><img name="search_img" border="0" src="/images/nav_grey_search.gif" width="75" height="19" alt="[Search]" title="Search"></a><a href="/virtual/" onmouseover="document.virtual_img.src='/images/nav_hi_virtual.gif';" onmouseout="document.virtual_img.src='/images/nav_grey_virtual.gif';"><img name="virtual_img" border="0" src="/images/nav_grey_virtual.gif" width="66" height="19" alt="[Virtual]" title="Virtual"></a><a href="/about/" onmouseover="document.about_img.src='/images/nav_hi_about.gif';" onmouseout="document.about_img.src='/images/nav_hi_about.gif';"><img name="about_img" border="0" src="/images/nav_hi_about.gif" width="63" height="19" alt="[About]" title="About"></a><a href="/help/" onmouseover="document.help_img.src='/images/nav_hi_help.gif';" onmouseout="document.help_img.src='/images/nav_grey_help.gif';"><img name="help_img" border="0" src="/images/nav_grey_help.gif" width="54" height="19" alt="[Help]" title="Help"></a><a href="/post/" onmouseover="document.nplogin_img.src='/images/nav_hi_nplogin.gif';" onmouseout="document.nplogin_img.src='/images/nav_grey_nplogin.gif';"><img name="nplogin_img" border="0" src="/images/nav_grey_nplogin.gif" width="128" height="19" alt="[Nonprofit Login]" title="Nonprofit Login"></a></td>
+<td width="467"><a href="/index.jsp" onmouseover="document.home_img.src='/images/nav_hi_home.gif';" onmouseout="document.home_img.src='/images/nav_grey_home.gif';"><img name="home_img" border="0" src="/images/nav_grey_home.gif" width="51" height="19" alt="[Home]" title="Home"></a><a href="/results/" onmouseover="document.search_img.src='/images/nav_hi_search.gif';" onmouseout="document.search_img.src='/images/nav_grey_search.gif';"><img name="search_img" border="0" src="/images/nav_grey_search.gif" width="75" height="19" alt="[Search]" title="Search"></a><a href="/virtual/" onmouseover="document.virtual_img.src='/images/nav_hi_virtual.gif';" onmouseout="document.virtual_img.src='/images/nav_grey_virtual.gif';"><img name="virtual_img" border="0" src="/images/nav_grey_virtual.gif" width="66" height="19" alt="[Virtual]" title="Virtual"></a><a href="/about/" onmouseover="document.about_img.src='/images/nav_hi_about.gif';" onmouseout="document.about_img.src='/images/nav_hi_about.gif';"><img name="about_img" border="0" src="/images/nav_hi_about.gif" width="63" height="19" alt="[About]" title="About"></a><a href="/help/" onmouseover="document.help_img.src='/images/nav_hi_help.gif';" onmouseout="document.help_img.src='/images/nav_grey_help.gif';"><img name="help_img" border="0" src="/images/nav_grey_help.gif" width="54" height="19" alt="[Help]" title="Help"></a><a href="/post/" onmouseover="document.nplogin_img.src='/images/nav_hi_nplogin.gif';" onmouseout="document.nplogin_img.src='/images/nav_grey_nplogin.gif';"><img name="nplogin_img" border="0" src="/images/nav_grey_nplogin.gif" width="128" height="19" alt="[Login]" title="Login"></a></td>
 </tr>
 <tr>
-<td colspan="2" height="23"><img src="/images/1x1.gif" height="23" alt="[]"></td>
+<td colspan="2">
+
+<img src="/images/1x1.gif" height="15" width="1"><br>
+
+
+</td>
 </tr>
 
 </tbody></table>
@@ -105,6 +110,14 @@ Organizations 18036 | Opportunities 34262 | Referrals 595098</td>
 </tr>
 
 
+<tr>
+<td colspan="3">
+
+<a href="/about/corporate/" onmouseover="document.corp_img.src='/images/about_hi_corporate.gif';" onmouseout="document.corp_img.src='/images/about_grey_corporate.gif';"><img name="corp_img" border="0" src="/images/about_grey_corporate.gif"></a><br>
+</td>
+</tr>
+
+
 
 <tr>
 <td colspan="3">
@@ -166,7 +179,7 @@ Organizations 18036 | Opportunities 34262 | Referrals 595098</td>
 <b>Privacy Policy</b><br>
 
 <p><b>Our Commitment To Privacy</b><br>
-Your privacy is important to us. Our ongoing commitment to the protection of your privacy is essential to maintaining the relationship of trust that exists between VolunteerMatch and all of our users, whether they be nonprofit organizations, volunteers, readers of our newsletters or other visitors to the site. This notice of our privacy policy is intended to help you understand our online information security practices.
+Your privacy is important to us. Our ongoing commitment to the protection of your privacy is essential to maintaining the relationship of trust that exists between VolunteerMatch and all of our users, whether they be nonprofit organizations, volunteers, volunteers with a personalized account,readers of our newsletters or other visitors to the site. This notice of our privacy policy is intended to help you understand our online information security practices.
 
 </p><p><b>The Information We Collect</b><br>
 You may have accessed VolunteerMatch directly by visiting our Web site, the home page of which is located at www.volunteermatch.org, or through the Web site of one of our third-party partners with whom we have teamed to provide volunteering services ("Partners"). This notice applies to all information you submit to VolunteerMatch, whether through the VolunteerMatch Web site or through the Web site of one of our Partners. Please note that we cannot be responsible for the information you submit directly to third parties, including our Partners, who may have their own posted policies regarding the collection and use of your information. We urge you to review the policies of our Partners through whom you may access our services.
@@ -184,6 +197,17 @@ You may have accessed VolunteerMatch directly by visiting our Web site, the home
 ·&nbsp;ZIP code<br>
 ·&nbsp;Comments about opportunity optional<br>
 
+</p><p><b>For Volunteers (with a personalized account):</b><br>
+·&nbsp;First and Last Name<br>
+·&nbsp;Email address<br>
+·&nbsp;Phone number<br>
+·&nbsp;ZIP code<br>
+·&nbsp;Comments about opportunity (optional)<br>
+·&nbsp;Username and Password<br>
+·&nbsp;Referral history<br>
+·&nbsp;Customized email preferences (optional)<br>
+·&nbsp;Résumé (optional)<br>
+
 </p><p><b>For Nonprofit Organizations:</b><br>
 ·&nbsp;Administrator Information: First and last name, email, telephone number, ZIP code, username and password.<br>
 ·&nbsp;Organization Information: Name of organization, contact information (including contact title, first and last name, phone, street address and email), EIN/tax identification number, mission statement, description of services, and minimum one category. Fax, web site address, and directions to physical location optional.<br>
@@ -200,24 +224,28 @@ If you indicate to us that you are interested in a particular volunteer opportun
 
 </p><p>To the extent that you have provided any Information to us through our Web site or the Web site of one of our Partners regarding volunteer opportunities associated with one of our Partner, we may share your Information with the applicable Partner.  Each of our Partners has its own policies regarding the collection and use of personal information, and VolunteerMatch is not responsible for their use of your Information.
 
+</p><p><b>For Volunteers (with an account):</b><br>
+If you indicate to us that you are interested in creating a personalized account, the information we gather from you will be used to permit you to: access the account, customize outbound email services, review your referral history and/or post a résumé that can be sent as an attachment to inquiries you make using the VolunteerMatch service.
+
 </p><p><b>For Nonprofit Organizations:</b><br>
 If you submit Information to us as nonprofit organization, then, subject to the terms and conditions as a nonprofit member of VolunteerMatch, your Information (excluding your EIN number) will be accessible by anyone who accesses VolunteerMatch.
 
 </p><p>Nonprofits who receive email addresses from potential volunteer signups are strongly encouraged to adopt privacy standards similar to those of VolunteerMatch. Each such organization, however, has its own policies regarding collection and use of personal information and we are not responsible for their use of your Information. Inappropriate use of personal information received from VolunteerMatch may jeopardize nonprofit membership with VolunteerMatch. VolunteerMatch reserves the right to determine, in its discretion, what constitutes inappropriate use of this information. For more about a nonprofit organization's policy, please contact them directly using the contact information posted for that organization on our site.
 
 </p><p><b>Cookies</b><br>
-Cookies are tiny data files that Web sites commonly write to your hard drive when you visit them so that they can remember you when you visit. A cookie file contains information that can identify you anonymously. Our site uses cookies to maintain a user's identity between sessions so that the site can be personalized based on user preferences or a user's history.
+Cookies are tiny data files that Web sites commonly write to your hard drive when you visit them so that they can remember you when you visit. A cookie file contains information that can identify you anonymously and maintain your account's privacy.  Our site uses cookies to maintain a user's identity between sessions so that the site can be personalized based on user preferences or a user's history.
 
 </p><p><b>Third-party Access and Use</b><br>
 Occasionally, we hire third-party service providers to help us provide or improve the services we offer you.  Sometimes it is necessary for these providers to have access to the Information we collect about you.  In those cases, we take reasonable steps to ensure that these providers do not use or otherwise disclose any Information we collect about you except for the purpose of fulfilling their service obligations to us.
 
 </p><p>In addition, we share aggregate information about our users with certain third parties. This information shows user activity as a whole rather than on an individual basis and cannot be used to individually identify you. We use aggregated information we collect about users to continue to improve our service for you. 
-This site contains links to other sites. VolunteerMatch is not responsible for the privacy practices or the content of such Web sites. 
+
+</p><p>This site contains links to other sites. VolunteerMatch is not responsible for the privacy practices or the content of such Web sites. 
 
 </p><p>In the unlikely event that Impact Online, Incorporated, the organization that operates VolunteerMatch, undergoes a sale or transfer of all or substantially all of its assets, the acquiring entity will be subject to this Privacy Policy in its use of your personally identifiable Information. In addition, in the further unlikely event that Impact Online, Incorporated is adjudicated bankrupt or insolvent (a) there will be no further use or disclosure of your personally identifiable Information by Impact Online, Incorporated and (b) your personally identifiable Information will be destroyed. In addition, there will be no use or disclosure of your personally identifiable Information by any entity that acquires assets of Impact Online, Incorporated pursuant to such bankruptcy or insolvency proceedings.
 
 </p><p><b>How You Can Access Or Correct Your Information</b><br>
-If you are a nonprofit member, you may access all your personally identifiable Information that we collect and maintain online by simply inputting your username and password in the <a href="http://www.volunteermatch.org/post/">Account</a> area. You may make any changes or correct factual errors in your administrator, organization and opportunity information 24 hours a day. We use this procedure to better safeguard your Information. You do not need to contact us to access your record or to make any changes. If you have problems changing your organization's Information, please contact Client Relations at <a href="mailto:respond@volunteermatch.org">respond@volunteermatch.org</a>.
+If you are a nonprofit member, or volunteer with an account, you may access all your personally identifiable Information that we collect and maintain online by simply inputting your username and password where indicated on the website.  If you are a nonprofit administrator, you may make any changes or correct factual errors in your administrator, organization and opportunity information 24 hours a day. We use this procedure to better safeguard your Information. You do not need to contact us to access your record or to make any changes. If you have problems changing your organization's Information, please contact Client Relations at <a href="mailto:respond@volunteermatch.org">respond@volunteermatch.org</a>.
 
 </p><p>If you are a volunteer and would like to have your Information deleted from the site, you may do so by contacting Client Relations at <a href="mailto:respond@volunteermatch.org">respond@volunteermatch.org</a>.
 
@@ -233,7 +261,7 @@ VolunteerMatch may change this privacy policy from time to time. VolunteerMatch 
 </p><p><b>How To Contact Us</b><br>
 We appreciate your questions or comments about this privacy statement, the practices of this site, or your dealings with VolunteerMatch. Please send email to <a href="mailto:respond@volunteermatch.org">respond@volunteermatch.org</a> or you can send snail mail to 385 Grove Street, San Francisco, CA 94102.
 
-</p><p>Revised July 31, 2001
+</p><p>Revised May 13, 2002
 
 <!-- end content -->
 
@@ -251,6 +279,11 @@ We appreciate your questions or comments about this privacy statement, the pract
 
 
 
+
+
+
+
+
 <!-- end content -->
 <!-- footer here -->
 
@@ -260,9 +293,9 @@ We appreciate your questions or comments about this privacy statement, the pract
 </tr>
 <tr>
 <td align="center">
-<a href="/index.jsp">Home</a> | <a href="/results/">Search</a> | <a href="/virtual/">Virtual</a> | <a href="/about/">About</a> | <a href="/help/">Help</a> | <a href="/about/partners/">Partners</a> | <a href="/about/news/">News</a> | <a href="/about/newsletter/">Newsletter</a> | <a href="/post/">Nonprofit Login</a><br>
-<a href="/about/legal/privacy.jsp">Privacy Policy</a> &amp; <a href="/about/legal/terms.jsp">Terms &amp; Conditions</a><br>
-<a href="/about/legal/">Copyright</a> © 1998 - 2001 VolunteerMatch. All Rights Reserved<br>
+<a href="/index.jsp">Home</a> | <a href="/results/">Search</a> | <a href="/virtual/">Virtual</a> | <a href="/about/">About</a> | <a href="/help/">Help</a> | <a href="/about/partners/">Partners</a> | <a href="/about/news/">News</a> | <a href="/about/newsletter/">Newsletter</a> | <a href="/post/">Login</a><br>
+<a href="/about/legal/privacy.jsp">Privacy Policy</a> (updated 5/13/02) &amp; <a href="/about/legal/terms.jsp">Terms &amp; Conditions</a> | <a href="/about/corporate/">VolunteerMatch Corporate</a><br>
+<a href="/about/legal/">Copyright</a> © 1998 - 2002 VolunteerMatch. All Rights Reserved<br>
 </td>
 </tr>
 </tbody></table>
