--- a/m/me/met/metavante.com.html
+++ b/m/me/met/metavante.com.html
@@ -1,15 +1,18 @@
-<!--The following is the downloaded HTML source of the metavante.com privacy policy that was archived on 2001-12-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011211231652id_/http%3A//metavante.com/profile/privacy.jsp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the metavante.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604010206id_/http%3A//www.metavante.com/profile/privacy.jsp) for the most accurate reproduction.-->
 
 <html><head>
 <script src="/javascripts/javascripts.js"></script>
-<script language="javascript">document.write("<title>" + title + "</title>");</script><title>Metavante   | web | 20011211231652id_ | http%3A |  | metavante.com | profile | privacy.jsp</title><title>    Metavante
-    </title><script language="JavaScript">if (document.layers){document.write("<LINK rel=stylesheet type='text/css' href='/stylesheetN4.css'>")}
-else{document.write("<LINK rel=stylesheet type='text/css' href='/stylesheet.css'>")}</script><link rel="stylesheet" type="text/css" href="/stylesheet.css"></head>
-<!--Include a second set of head and title tags for non-javascript browsers-->
-
-    
-
+<script language="JavaScript"><!--
+if (document.layers){document.write("<LINK rel=stylesheet type='text/css' href='/stylesheetN4.css'>")}
+else{document.write("<LINK rel=stylesheet type='text/css' href='/stylesheet.css'>")};
+document.title = title;
+--></script><link rel="stylesheet" type="text/css" href="/stylesheet.css"><title>Metavante   | web | 20020604010206id_ | http%3A |  | www.metavante.com | profile | privacy.jsp</title>
+    <meta name="DESCRIPTION" content="Metavante Corporation Privacy Statement 
+Our top priority is to provide you, our customer, with outstanding products and services. To achieve this goal, we must collect, maintain, and use certain information. Metavante Corporation recognizes and respects your privacy concerns and expectations about this information. We want you to know about our privacy policies and practices for our Web site. 
+">  
+    <meta name="KEYWORDS" content="privacy statement">
+    </head>
 <body bgcolor="Black" link="#800080" vlink="#999966" leftmargin="0" topmargin="0" marginheight="0" marginwidth="0">	<table width="760" border="0" cellspacing="0" cellpadding="0" align="left" valign="TOP">
 	 <tbody><tr>
 		<td colspan="10" width="760">
@@ -31,36 +34,34 @@ thisFromPage= "referer=" + thisFromPage;
 </script>
 <table width="760" border="0" cellpadding="0" cellspacing="0" bgcolor="#ffffff">
 <tbody><tr>
-	<td bgcolor="#ffffff"><a href="/index.jsp"><img src="/media/images/logo_tagline.gif" width="226" height="82" border="0" alt="Metavante financial services"></a></td>
+	<td width="585" bgcolor="#FFFFFF"><a href="/index.jsp"><img src="/media/images/logo_tagline.gif" width="226" height="82" border="0" alt="Metavante financial services"></a></td>
 	<td>
 		<!--- start khaki box --->
 	<table width="175" border="0" cellspacing="0" cellpadding="0" align="right" bgcolor="#CCCC99" height="86">
 	<tbody><tr align="center">
-	<td><a href="/contactusinfo.jsp" class="srch">Contact Information</a> <span class="srch"></span></td>
+	<td width="175" align="center"><a href="/contactusinfo.jsp" class="srch"><img src="/media/images/contactus.gif" width="174" height="18" border="0" alt="Contact Us"></a><span class="srch"></span></td>
 	</tr>
 	<tr align="center">
-	<td height="5"><!--<FORM ACTION="/bin/cgi/AT-951_1search.cgi" METHOD=POST>-->
+	<td height="5"><form action="/bin/cgi/AT-951_1search.cgi" method="POST">
 
-<table><tbody><tr><td><!--<script language="javascript1.2"> if( document.layers ){document.write("<INPUT NAME='search' VALUE='' size='5'>"); }
-   else{ document.write("<INPUT NAME='search' VALUE='' size='10'>"); }</script>
--->
-</td><td><!--<INPUT TYPE="image" SRC="/Excite/pictures/AT-search_button.gif" NAME="searchButton" HEIGHT=20
+<table><tbody><tr><td><script language="javascript1.2"> if( document.layers ){document.write("<INPUT NAME='search' VALUE='' size='5'>"); }
+   else{ document.write("<INPUT NAME='search' VALUE='' size='10'>"); }</script><input name="search" value="" size="10">
 
-WIDTH=75 ALT="Search" BORDER=0>--></td></tr></tbody></table>
-<!--
-<INPUT TYPE="hidden" NAME="sp" VALUE="sp">
+</td><td><input type="image" src="/Excite/pictures/AT-search_button.gif" name="searchButton" height="20" width="75" alt="Search" border="0"></td></tr></tbody></table>
 
-</FORM>-->
+<input type="hidden" name="sp" value="sp">
+
+</form>
 </td>
 	</tr>
 	<tr align="center">
-	<td height="1"><img src="/media/images/cc3300.gif" border="0" alt="" width="165" height="1"></td>
+	<td height="1"><img src="/media/images/999952.gif" border="0" alt="" width="165" height="1"></td>
 	</tr>
 	<tr align="center">
-	<td><a href="https://www.custcomm.midata.com" class="textlink"><img src="/media/images/clientlogin.gif" width="175" height="20" border="0" alt="Client Login"></a></td>
+	<td><a href="https://www.custcomm.midata.com" class="textlink"><img src="/media/images/extranetlogin.gif" width="175" height="20" border="0" alt="Client Extranet Login"></a></td>
 	</tr>
 	<tr align="center">
-	<td><img src="/media/images/cc3300.gif" border="0" alt="" width="165" height="1"></td>
+	<td><img src="/media/images/999952.gif" border="0" alt="" width="165" height="1"></td>
 	</tr>
 	<tr align="center">
 	<td><span class="srch"><!--Javascript clock--><script language="Javascript"><!--//
@@ -84,7 +85,7 @@ WIDTH=75 ALT="Search" BORDER=0>--></td></tr></tbody></table>
 <tr>
 	<td width="263" height="18" class="whitenav"><nobr>&nbsp;<a href="/profile/corporateprofile.jsp" onmouseover="HM_f_PopUp('elMenu1',event)" onmouseout="HM_f_PopDown('elMenu1')" class="whitenav">Corporate Profile</a> | <a href="/newsroom/index.jsp" onmouseover="HM_f_PopUp('elMenu2',event)" onmouseout="HM_f_PopDown('elMenu2')" class="whitenav">Newsroom</a> | <a href="/careers/index.jsp" onmouseover="HM_f_PopUp('elMenu3',event)" onmouseout="HM_f_PopDown('elMenu3')" class="whitenav">Careers</a> | <a href="/events/index.jsp" onmouseover="HM_f_PopUp('elMenu4',event)" onmouseout="HM_f_PopDown('elMenu4')" class="whitenav">Events</a></nobr></td>	
 	<td width="187" height="18" class="whitenav"><nobr><a href="/solutions/index.jsp" onmouseover="HM_f_PopUp('elMenu5',event)" onmouseout="HM_f_PopDown('elMenu5')" class="whitenav">Products &amp; Services</a> | <a href="/advantages/index.jsp" onmouseover="HM_f_PopUp('elMenu6',event)" onmouseout="HM_f_PopDown('elMenu6')" class="whitenav">Advantages</a></nobr></td>
-	<td width="302" height="18" class="whitenav"><nobr><a href="/supportadvantage/index.jsp" onmouseover="HM_f_PopUp('elMenu7',event)" onmouseout="HM_f_PopDown('elMenu7')" class="whitenav">Support Advantage</a> | <a href="/education/index.jsp" onmouseover="HM_f_PopUp('elMenu8',event)" onmouseout="HM_f_PopDown('elMenu8')" class="whitenav">Education &amp; Training</a> | <a href="/infocenter/index.jsp" onmouseover="HM_f_PopUp('elMenu9',event)" onmouseout="HM_f_PopDown('elMenu9')" class="whitenav">InfoCenter</a></nobr></td>	
+	<td width="302" height="18" class="whitenav"><nobr><a href="/supportadvantage/index.jsp" onmouseover="HM_f_PopUp('elMenu7',event)" onmouseout="HM_f_PopDown('elMenu7')" class="whitenav">Support Advantage</a> | <a href="/education/index.jsp" onmouseover="HM_f_PopUp('elMenu8',event)" onmouseout="HM_f_PopDown('elMenu8')" class="whitenav">Education &amp; Training</a><!---  | <A HREF="/infocenter/index.jsp" onMouseOver="HM_f_PopUp('elMenu9',event)" onMouseOut="HM_f_PopDown('elMenu9')" class="whitenav">InfoCenter</a> ---></nobr></td>	
 </tr>	
 </tbody></table>
 <script language="JavaScript1.2" src="/javascripts/HM_Loader.js" type="text/javascript"></script><script language="JavaScript1.2" src="/javascripts/HM_Arrays.js" type="text/javascript"></script><script language="JavaScript1.2" src="/javascripts/HM_ScriptDOM.js" type="text/javascript"></script>
@@ -99,36 +100,43 @@ WIDTH=75 ALT="Search" BORDER=0>--></td></tr></tbody></table>
 		<td width="14" bgcolor="#ffffff"><img src="/media/images/spacer.gif" width="14" height="1"></td>
 		<td width="395" bgcolor="#ffffff" valign="top"><p align="center"><span class="hdr1">Corporate Profile</span></p><span class="heading1">Metavante Corporation<br>Privacy Statement</span>
 
-<p>Our top priority is to provide you, our customer, with outstanding products and services. To achieve this goal, we must collect, maintain, and use certain information.  Metavante Corporation recognizes and respects your privacy concerns and expectations about this information. We want you to know about our privacy policies and practices for our Web site. 
+<p>Our top priority is to provide you, our customer, with outstanding products and services.  To achieve this goal, we must collect, maintain, and use certain information.  Metavante Corporation recognizes and respects your privacy concerns and expectations about this information.  We want you to know about our privacy policies and practices for our Web site.   This statement is effective as of March 18, 2002.
 
-</p><p>When you request pages at our Web site, our Web servers automatically recognize your browser's domain name and IP address. We collect this information in order to aggregate information on what pages visitors access. This information is collected solely for statistical purposes and to determine visitor access to restricted areas on our site. It is not used to identify individuals nor is it shared with third parties.
-
-</p><p>Our Web servers use "cookies" to collect this information. The term "cookie" refers to files that are transferred from a Web site to your computer's hard drive. The purpose of cookies is to enable our Web site to track your activities on our Web site. A cookie does not retrieve data from your hard drive, carry computer viruses, or capture your E-mail address. Most browsers will allow you to disable cookies or warn you before accepting a cookie. If you decide not to accept cookies, you may not be able to successfully navigate some areas of our Web site. 
-
-</p><p>Why do we use cookies? The use of cookies can improve the level of service for visitors to our site. For example, for sites that require registration, a cookie file can be stored on your computer, enabling you to skip the registration process on subsequent visits.
-
-</p><p><span class="heading2">Personal Information Which You Choose To Submit</span>
+</p><p><span class="heading2">Personal Information Which You Choose to Submit</span>
 
 </p><p>As a visitor to our Web site, you may choose to send us any of the following: 
 </p><ul>
 <li>an E-mail address for an E-news subscription; 
-</li><li>your name, address, and personal data for an on-line resume submission; 
-</li><li>your name, E-mail address, and other relevant contact information to fulfill your request for more information about our products or company; or 
-</li><li>bank numbers and other relevant customer information to provide you with access to restricted areas on our Web site. 
+</li><li>your name, address, and personal data for an online resume submission; 
+</li><li>your name, E-mail address, and other relevant contact information to fulfill your request for more information about our products or company;
+</li><li>bank numbers and other relevant customer information to provide you with access to restricted areas on our Web site; or
+</li><li>your name, address, E-mail address, and credit card information for an online purchase.
 </li></ul>
 
-<p>Whenever you submit personal information for a specific purpose, your information will be used for that purpose only. In some cases, you can choose how much information to supply. (For example, when submitting an online resume, you may choose to include only an E-mail address—not a telephone number or mailing address—for replies.) There may be instances where we require complete information for a particular activity, but it is your choice whether or not to complete the form.
+<p>Whenever you submit personal information for a specific purpose, your information will be used for that purpose only. <!---  In some cases, you can choose how much information to supply.  (For example, when submitting an online resume, you may choose to include only an E-mail address &mdash; not a telephone number or mailing address &mdash; for replies.) There may be instances where we require complete information for a particular activity, but it is your choice whether or not to complete the form. --->  
+
+</p><p><span class="heading2">Our Use of Cookies</span>
+
+</p><p>When you request pages at our Web site, our Web servers automatically recognize your browser's domain name and IP address.  We collect this information in order to aggregate information on what pages visitors access.  This information is collected solely for statistical purposes and to determine visitor access to restricted areas on our site.  It is not used to identify individuals nor is it shared with third parties.  
+
+</p><p>Our Web servers use "cookies" to collect this information.  The term "cookie" refers to files that are transferred from a Web site to your computer's hard drive.  The purpose of cookies is to enable our Web site to track your activities on our Web site.  A cookie does not retrieve data from your hard drive, carry computer viruses, or capture your E-mail address.  Most browsers will allow you to disable cookies or warn you before accepting a cookie.  If you decide not to accept cookies, you may not be able to successfully navigate some areas of our Web site.  
+
+</p><p>Why do we use cookies?  The use of cookies can improve the level of service for visitors to our site.  For example, for sites that require registration, a cookie file can be stored on your computer, enabling you to skip the registration process on subsequent visits.  
+
+</p><p><span class="heading2">Security</span>
+
+</p><p>When you make an online purchase, we use Secure Sockets Layer (SSL) encryption technology to safeguard the confidentiality of your credit card and other personal information.  SSL uses an encryption process to avoid unauthorized access or copying of information as it travels over the Internet.  All of the personal information that we collect is protected against unauthorized access through the use of firewalls and other security measures.
 
 </p><p><span class="heading2">No Spam </span>
 
- </p><p>Metavante Corporation will not send unsolicited E-mail to you. We will use E-mail to respond to E-mail messages from you or to engage in other communication which you have expressly permitted.
+ </p><p>Metavante Corporation will not send unsolicited E-mail to you.  We will use E-mail to respond to E-mail messages from you or to engage in other communication which you have expressly permitted.  
 
 </p><p><span class="heading2">Links To Other Web Sites</span>
 
- </p><p>There are links to other Web sites from metavante.com. However, we are not responsible for the content or privacy policies of those other sites.
+ </p><p>There are links to other Web sites from metavante.com.  However, we are not responsible for the content or privacy policies of those other sites.  
 
 </p><p><span class="heading2">Conclusion</span> 
-</p><p>Metavante Corporation recognizes the importance of protecting privacy, and we take our responsibility seriously. Compliance with privacy requirements is critically important for your success and ours.
+</p><p>Metavante Corporation recognizes the importance of protecting privacy, and we take our responsibility seriously.  Compliance with privacy requirements is critically important for your success and ours.  
 
 </p></td>
 		<td width="14" bgcolor="#ffffff"><img src="/media/images/spacer.gif" width="14" height="1"></td>
