americangreetings.com (archived on 2002-06-04)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;shopping",
  "char_count": 20819,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.24,
  "homepage_snapshot_redirected_domain": "americangreetings.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020324041426id_/http://americangreetings.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020324041426id_/http%3A//americangreetings.com",
  "interval": "2002_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "americangreetings.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020604010843id_/http%3A//www.americangreetings.com/warrants.pd",
  "policy_title": "AmericanGreetings.com - thousands of greetings for you to send.",
  "policy_url": "americangreetings.com/warrants.pd",
  "sha1": "b8e2c5eb7b7faea3458685aeeba975387c489b2b",
  "simhash": 17982800066933267993,
  "simhash_updated": false,
  "site_hostname": "americangreetings.com",
  "site_url": "http://americangreetings.com",
  "smog": 15.07,
  "strict_updated": true,
  "timestamp": "20020604010843",
  "word_count": 3444,
  "year": 2002
}

--- a/a/am/ame/americangreetings.com.html
+++ b/a/am/ame/americangreetings.com.html
@@ -1,25 +1,29 @@
-<!--The following is the downloaded HTML source of the americangreetings.com privacy policy that was archived on 2001-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011217182758id_/http%3A//www.americangreetings.com/warrants.pd%23top) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the americangreetings.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604010843id_/http%3A//www.americangreetings.com/warrants.pd) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head> 
-<title>americangreetings.com</title> 
+<html><head></head><body bgcolor="#ffffff" link="#3300ff" vlink="#990099" alink="#000000" text="#000000" marginheight="0" marginwidth="0" topmargin="0" leftmargin="0"><font color="#eag154"></font>
+ 
+ 
+ 
+ 
+<title>AmericanGreetings.com - thousands of greetings for you to send.</title> 
 <script language="JavaScript" src="http://www.americangreetings.com/js/master.js"></script> 
 <script language="JavaScript1.1" src="http://ads.web.aol.com/file/adsWrapper.js"></script> 
  
+<!--nothing here--> 
  
-</head> 
  
-<body bgcolor="#ffffff" link="#3300ff" vlink="#990099" alink="#000000" text="#000000" marginheight="0" marginwidth="0" topmargin="0" leftmargin="0" onclick="setTimeout('setMyFocus()',300);" onfocus="setTimeout('setMyFocus()',300);"> 
+ 
 <a name="top"></a> 
 <!--header--> 
 <center> 
 
-<table width="770" border="0" cellspacing="0" cellpadding="0"><tbody><tr><td><img src="http://mi.imgag.com/ag/space.gif" alt="" border="0" width="1" height="3"></td></tr><tr><td valign="bottom"><img src="http://mi.imgag.com/ag/logo/ag_logodflt.gif" alt="" border="0" hspace="2"></td><td valign="bottom"><iframe width="468" height="60" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" bordercolor="#000000" src="http://ads.adsag.com/html.ng/adsize=468x60&amp;channel=og&amp;page=warrants.pd&amp;site=DFLT&amp;cat=DFLT&amp;subcat=DFLT"><SCRIPT LANGUAGE="JavaScript1.1" SRC="http://ads.adsag.com/js.ng/Params.richmedia=yes&adsize=468x60&channel=og&page=warrants.pd&site=DFLT&cat=DFLT&subcat=DFLT"></SCRIPT><NOSCRIPT><A HREF="http://ads.adsag.com/click.ng/Params.richmedia=yes&adsize=468x60&channel=og&page=warrants.pd&site=DFLT&cat=DFLT&subcat=DFLT" target="_blank"><IMG SRC="http://ads.adsag.com/image.ng/Params.richmedia=yes&adsize=468x60&channel=og&page=warrants.pd&site=DFLT&cat=DFLT&subcat=DFLT"></A></NOSCRIPT></iframe><br><img src="http://mi.imgag.com/ag/space.gif" width="468" height="1" alt="" border="0"></td></tr><tr><td colspan="2"><img src="http://mi.imgag.com/ag/space.gif" alt="" border="0" width="1" height="3"></td></tr><tr><td colspan="2"><img src="http://mi.imgag.com/ag/nav/nav_home2.gif" border="0" usemap="#nav"></td></tr><tr><td><img src="http://mi.imgag.com/ag/space.gif" alt="" border="0" width="1" height="3"></td></tr></tbody></table>
+<table width="770" border="0" cellspacing="0" cellpadding="0"><tbody><tr><td><img src="http://www.americangreetings.com/ag/space.gif" alt="" border="0" width="1" height="3"></td></tr><tr><td valign="bottom"><img src="http://www.americangreetings.com/ag/logo/ag_logodflt.gif" width="157" height="60" alt="" border="0" hspace="2"></td><td valign="bottom"><iframe width="468" height="60" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" bordercolor="#000000" src="http://ads.adsag.com/html.ng/adsize=468x60&amp;channel=og&amp;page=warrants.pd&amp;site=DFLT&amp;cat=DFLT&amp;subcat=DFLT"><SCRIPT LANGUAGE="JavaScript" SRC="http://ads.adsag.com/js.ng/Params.richmedia=yes&adsize=468x60&channel=og&page=warrants.pd&site=DFLT&cat=DFLT&subcat=DFLT"></SCRIPT><NOSCRIPT><A HREF="http://ads.adsag.com/click.ng/Params.richmedia=yes&adsize=468x60&channel=og&page=warrants.pd&site=DFLT&cat=DFLT&subcat=DFLT" target="_blank"><IMG SRC="http://ads.adsag.com/image.ng/Params.richmedia=yes&adsize=468x60&channel=og&page=warrants.pd&site=DFLT&cat=DFLT&subcat=DFLT"></A></NOSCRIPT></iframe></td></tr><tr><td colspan="2"><img src="http://www.americangreetings.com/ag/space.gif" alt="" border="0" width="1" height="3"></td></tr><tr><td colspan="2"><img src="http://www.americangreetings.com/ag/nav/nav_home2.gif" border="0" usemap="#nav"></td></tr><tr><td><img src="http://www.americangreetings.com/ag/space.gif" alt="" border="0" width="1" height="3"></td></tr></tbody></table>
 <map name="nav">
 <area alt="Our home page" coords="5,2,66,28" href="http://www.americangreetings.com">
 <area alt="Printable paper projects" coords="76,2,134,28" href="http://www.americangreetings.com/cnp/index.pd">
-<area alt="Sign In" coords="151,3,193,28" href="javascript:openSignInPop();">
-<area alt="Membership with unlimited access" coords="201,3,226,28" href="javascript:openJoin('http://ads.bmais.net/html.ng/adsize=text&amp;page=join&amp;site=DFLT&amp;ostatus=1')">
+<area alt="Sign In" coords="151,3,193,28" href="http://www.americangreetings.com/members/signin.pd">
+<area alt="Membership with unlimited access" coords="201,3,226,28" href="javascript:openJoin('http://ads.adsag.com/html.ng/adsize=text&amp;page=join&amp;site=DFLT&amp;params.styles=MKTjoin&amp;ostatus=1a')">
 <area alt="Questions answered" coords="234,3,292,28" href="http://www.americangreetings.com/customer/index.pd">
 <area alt="Update account information" coords="315,3,373,28" href="javascript:openOfferPop();">
 <area alt="Store email addresses" coords="380,3,441,28" href="javascript:openOfferPop();">
@@ -54,14 +58,14 @@
   
 <table width="500"> 
 <tbody><tr> 
-	<td> <a href="https://www.truste.org/validate/4542" target="_NEW"><img src="http://mi.imgag.com/ag/clicksealbox2.gif" width="91" height="73" border="0" align="left" alt=""></a> 
+	<td> <a href="https://www.truste.org/validate/4542" target="_NEW"><img src="http://www.americangreetings.com/ag/clicksealbox2.gif" width="91" height="73" border="0" align="left" alt=""></a> 
   </td> 
 </tr> 
 </tbody></table><br> 
    
 <font face="verdana,arial,helvetica" size="4" color="#000000"><strong>TRUSTe Licensee; Contact Information</strong></font><br> 
  
-AG is a licensee of the TRUSTe Privacy Program. If you have questions or concerns regarding this Policy, you should first email AmericanGreetings.com Customer Service at <a href="mailto:chris@americangreetings.com">chris@americangreetings.com</a> or contact us by mail at AmericanGreetings.com, Three American Rd., Cleveland, OH 44144.  If you do not receive acknowledgment of your inquiry or your inquiry has not been satisfactorily addressed, you should then contact TRUSTe <a href="http://www.truste.org" target="_blank">http://www.truste.org</a>.  TRUSTe will then serve as a liaison with the Site to resolve your concerns.<p></p> 
+AG is a licensee of the TRUSTe Privacy Program. If you have questions or concerns regarding this Policy, you should first email AmericanGreetings.com Customer Service at <a href="mailto:chris@americangreetings.com">chris@americangreetings.com</a> or contact us by mail at AmericanGreetings.com, One American Road, Cleveland, OH 44144.  If you do not receive acknowledgment of your inquiry or your inquiry has not been satisfactorily addressed, you should then contact TRUSTe <a href="http://www.truste.org" target="_blank">http://www.truste.org</a>.  TRUSTe will then serve as a liaison with the Site to resolve your concerns.<p></p> 
  
 <font face="verdana,arial,helvetica" size="4" color="#000000"><strong>Scope of Policy</strong></font><br> 
 <font face="verdana,arial,helvetica" size="2" color="#000000">This Policy applies to all AG-branded sites, including the AG organic sites as well as our co-branded sites including AG-AOL sites and Kidzonks.   This Policy does not apply to other companies’ or organizations’ web sites to which we link. You should carefully review the privacy policies of those web sites in order to determine how they treat your personal information.<p></p></font> 
@@ -210,35 +214,36 @@ As always, if you have any questions, please feel free to contact us at <a href=
 </font></font></font></font></font></font></font></font></font></font></font></font></font></td></tr></tbody></table></td> 
 <!--right--> 
 <td align="center" valign="top" bgcolor="#006699" width="140"> 
-<img src="http://mi.imgag.com/ag/space.gif" width="140" height="1" border="0"> 
+<img src="http://www.americangreetings.com/ag/space.gif" width="140" height="1" border="0"> 
 </td> 
 <!--end right--> 
 </tr></tbody></table>   
 <br><p><br> 
 <br>
 <table width="770" border="0" cellspacing="0" cellpadding="0">
-<tbody><tr><td colspan="2" bgcolor="#006699"><img src="http://mi.imgag.com/ag/space.gif" border="0" alt="" width="770" height="1"></td></tr>
-<tr><td colspan="2"><img src="http://mi.imgag.com/ag/space.gif" border="0" alt="" width="1" height="5"></td></tr>
+<tbody><tr><td colspan="2" bgcolor="#006699"><img src="http://www.americangreetings.com/ag/space.gif" border="0" alt="" width="770" height="1"></td></tr>
+<tr><td colspan="2"><img src="http://www.americangreetings.com/ag/space.gif" border="0" alt="" width="1" height="5"></td></tr>
 <tr>
 <td width="630" align="center">
-<img src="http://mi.imgag.com/ag/space.gif" border="0" alt="" width="630" height="1"><br>
+<img src="http://www.americangreetings.com/ag/space.gif" border="0" alt="" width="630" height="1"><br>
 <table border="0" cellpadding="4" cellspacing="0">
 <tbody><tr><td align="center">
 <font class="smallish" face="verdana,arial,helvetica" size="1">
  <a href="http://www.americangreetings.com/customer/index.pd" target="_top">Customer Service - Email Us</a><b> | </b>
- <script language="JavaScript" src="/mediakit/pop.js"></script><a href="JavaScript:OpenNewWindow('/mediakit/index.pd','700','500','yes')">Advertise With Us</a><b> | </b>
+ <script language="JavaScript" src="/mediakit/pop.js"></script><a href="JavaScript:OpenNewWindow('/advertise.pd','500','300','no')">Advertise With Us</a><b> | </b>
  <a href="http://www.americangreetings.com/corp/index.pd" target="_blank">AmericanGreetings.com Information</a> <b> | </b>
- <a href="http://www.americangreetings.com/warrants.pd" target="_top">Privacy Policy</a> <b> | </b>  <a href="http://www.americangreetings.com/legal.pd#top" target="_top">Terms of Service</a>
+ <a href="http://www.americangreetings.com/warrants.pd" target="_top">Privacy Policy</a> <b> | </b>  <a href="http://www.americangreetings.com/legal.pd#top" target="_top">Terms&nbsp;of&nbsp;Service</a>
 </font></td></tr>
 <tr><td align="center"><font class="smallish" face="verdana,arial,helvetica" size="1">Satisfaction Guarantee, Complete Privacy, Secure Transactions, Friendly Customer Service</font></td></tr>
 <tr><td align="center"><br>
 <font class="smallish" face="verdana,arial,helvetica" size="1">Copyright © 1997-2002 AG.com, Inc. All rights reserved.
 </font></td></tr></tbody></table>
 </td>
-<td width="140" align="right" valign="top"><img src="http://mi.imgag.com/ag/space.gif" border="0" alt="" width="1" height="4"><br>
-<img src="http://mi.imgag.com/ag/finalmark2.gif" border="0" alt=""></td>
+<td width="140" align="right" valign="top"><img src="http://www.americangreetings.com/ag/space.gif" border="0" alt="" width="1" height="4"><br><a href="http://www.americangreetings.com/warrants.pd" target="_top">
+<img src="http://www.americangreetings.com/ag/finalmark2.gif" border="0" alt=""></a></td>
 </tr>
-</tbody></table><br> 
+</tbody></table><br>
+ 
 <br></p><p><br></p><p><br> 
 <script language="JavaScript1.1" src="http://ads.web.aol.com/file/adsEnd.js"></script> 
  
