--- a/m/me/med/mediacorpsingapore.com.html
+++ b/m/me/med/mediacorpsingapore.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the mediacorpsingapore.com privacy policy that was archived on 2001-08-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20010803120136id_/http%3A//www.mediacorpsingapore.com/ect_privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mediacorpsingapore.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604012244id_/http%3A//www.mediacorpsingapore.com/ect_privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <title>MediaCorp Singapore</title>
@@ -79,8 +79,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
             <span class="worldbartext">community</span></td>
           <td valign="middle"><a href="http://grouplinks.eastciti.com/grouplinks/cf/mcigl/startemail.cfm"><img src="/com/b_email.gif" width="40" height="35" hspace="8" border="0"></a><br>
             <span class="worldbartext">free email</span></td>
-          <td valign="middle"><a href="http://www.mediacorpsingapore.com/ringtone/sms_tone.htm" target="_self"><img src="/com/b_ringtones.gif" width="40" height="35" hspace="5" border="0"></a><br>
-            <span class="worldbartext">ringtones</span></td>
+<td valign="middle"><a href="http://www.mediacorpsingapore.com/services/pda_download.htm" target="_blank"><img src="/com/b_pda.gif" width="38" height="36" hspace="5" border="0"></a><br><span class="worldbartext">pda</span></td>
           <td><img src="/com/1x1dot.gif" width="1" height="54"></td>
         </tr>
       </tbody></table>
@@ -121,37 +120,55 @@ displayAd("www.eastciti.com/index.htm","Left2")
 <!--- PRIVACY TERMS start --->
 <span class="title-of-stories">Privacy Policy Statement</span>
       
-</p><p> This Privacy Policy Statement sets forth the privacy policy pertaining to 
-this Site maintained by MediaCorp Interactive - <b>www.mediacorpsingapore.com</b>, 
-and all sites of the Media Corporation of Singapore which are linked to this Site 
-(collectively, the "Sites"). By using any Site, you are agreeing to the terms 
-set forth in this Privacy Policy Statement. 
-</p><p>
-For purposes of this Privacy Policy Statement, "Personal Information" means any information by which you can be personally identified, and includes your name, your address, your telephone number, your e-mail address and  the like. Most Sites do not require that you submit Personal Information  to us. However, some Sites may request Personal Information in order to help us serve you more effectively. Mediacorp Interactive collects Personal  Information only when you voluntarily submit such Personal Information to us, such as when placing a product order through a Site, when entering a contest, when posting a message to a forum, and so on.
-      </p><p>
-For each visitor to the Sites, our web servers automatically recognize only information regarding the visitor's domain name (or that of the visitor's access provider) and e-mail address. Regardless of the purpose for which it is submitted, it is MediaCorp Interactive's policy to maintain all Personal Information as confidential, and to use such Personal Information only for the following purposes:
+      </p><p> This Privacy Policy Statement sets forth the privacy policy pertaining 
+        to this Site maintained by Media Corporation of Singapore - <b>www.mediacorpsingapore.com</b>, 
+        and all sites of the Media Corporation of Singapore which are linked to 
+        this Site (collectively, the "Sites"). By using any Site, you are agreeing 
+        to the terms set forth in this Privacy Policy Statement. 
+      </p><p> For purposes of this Privacy Policy Statement, "Personal Information" 
+        means any information by which you can be personally identified, and includes 
+        your name, your address, your telephone number, your e-mail address and 
+        the like. Most Sites do not require that you submit Personal Information 
+        to us. However, some Sites may request Personal Information in order to 
+        help us serve you more effectively. Media Corporation of Singapore collects 
+        Personal Information only when you voluntarily submit such Personal Information 
+        to us, such as when placing a product order through a Site, when entering 
+        a contest, when posting a message to a forum, and so on. 
+      </p><p> For each visitor to the Sites, our web servers automatically recognize 
+        only information regarding the visitor's domain name (or that of the visitor's 
+        access provider) and e-mail address. Regardless of the purpose for which 
+        it is submitted, it is Media Corporation of Singapore's policy to maintain 
+        all Personal Information as confidential, and to use such Personal Information 
+        only for the following purposes: 
       </p><ul>
         <li>for the specific purpose for which it was volunteered (for example, to complete a product purchase, to enter a contest, to post a message to one of our forums, etc.;
         </li><li>to improve the content, appearance and utility of the Sites; </li>
         <li>to track our visitors' use of the Sites for internal market research; and
         </li><li>to notify our visitors of updates to the Sites.
       </li></ul>
-      <p> It is MediaCorp Interactive’s policy to keep Personal Information 
+      <p> It is Media Corporation of Singapore’s policy to keep Personal Information 
         only for so long as needed for such purposes. At any time, you may obtain 
-        a summary of the Personal Information on record with MediaCorp Interactive 
-        which has been collected about you via this Site. Except for Personal 
-        Information we need to complete your purchase of products, you may request 
-        at any time that MediaCorp Interactive dispose of any or all Personal 
-        Information about you. In addition, at any time you may request: 
+        a summary of the Personal Information on record with Media Corporation 
+        of Singaporewhich has been collected about you via this Site. Except for 
+        Personal Information we need to complete your purchase of products, you 
+        may request at any time that Media Corporation of Singapore dispose of 
+        any or all Personal Information about you. In addition, at any time you 
+        may request: 
       </p><ol type="i">
-        <li>that MediaCorp Interactive correct any such Personal  Information; or 
-        </li><li>that such Personal Information be removed from MediaCorp Interactive's marketing databases.
+        <li>that Media Corporation of Singapore correct any such Personal Information; 
+          or 
+        </li><li>that such Personal Information be removed from 's marketing databases. 
       </li></ol>
-      <p>
-To make any request described above, send an e-mail to <a href="mailto:editor@eastciti.com">editor@eastciti.com</a> or write to MediaCorp Interactive, Caldecott Broadcast Centre, Andrew Road, Singapore 299939. When contacting us, please be sure to provide us with your exact e-mail address, name, address and/or telephone number(s) in order to be sure we handle your request correctly.
-      </p><p>
-MediaCorp Interactive reserves the right, at its discretion, to change, modify, add, or remove portions of this Privacy Policy Statement at any time. You should check this page periodically for changes. Your continued use of this Site following the posting of changes to this Privacy Policy Statement will mean that you accept those changes.
-
+      <p> To make any request described above, send an e-mail to <a href="mailto:editor@mediacorptv.com%20">editor@mediacorptv.com 
+        </a>or write to Media Corporation of Singapore, Caldecott Broadcast Centre, 
+        Andrew Road, Singapore 299939. When contacting us, please be sure to provide 
+        us with your exact e-mail address, name, address and/or telephone number(s) 
+        in order to be sure we handle your request correctly. 
+      </p><p> Media Corporation of Singapore reserves the right, at its discretion, 
+        to change, modify, add, or remove portions of this Privacy Policy Statement 
+        at any time. You should check this page periodically for changes. Your 
+        continued use of this Site following the posting of changes to this Privacy 
+        Policy Statement will mean that you accept those changes. 
       </p><p> 
       </p><p>
 
@@ -187,9 +204,8 @@ MediaCorp Interactive reserves the right, at its discretion, to change, modify, 
     <td><img src="home/images/1x1dot.gif" width="1" height="4"></td>
   </tr>
 </tbody></table>
-<!--------------------- THE THIRD TABLE END ----------------------> 
-<!-------------------- THE FIFTH TABLE START -----------------------> 
-<!------------------ THE FIFTH TABLE END ----------------------> 
+Media Corporation of Singapore<!--------------------- THE THIRD TABLE END ----------------------> 
+<!-------------------- THE FIFTH TABLE START -----------------------> <!------------------ THE FIFTH TABLE END ----------------------> 
 <!-------------------- THE SIXTH TABLE START ----------------------> 
 <table border="0" cellspacing="0" cellpadding="0" width="760">
 <tbody><tr> 
@@ -218,7 +234,7 @@ displayAd("www.eastciti.com/index.htm","Bottom")
 <td align="center">
 <font face="arial,helvetica" size="1">
 | <a href="/ect_terms.htm" target="_top">Terms of Service</a> | <a href="/ect_privacy.htm" target="_top">Privacy Policy</a> | <br>
-Copyright © 2001 MediaCorp Interactive.
+Copyright © 2002 MediaCorp Technologies.
 </font>
 </td>
 </tr>
