--- a/b/be/ben/bengalimatrimony.com.html
+++ b/b/be/ben/bengalimatrimony.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the bengalimatrimony.com privacy policy that was archived on 2001-12-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011214110614id_/http%3A//www.bengalimatrimony.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bengalimatrimony.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604014326id_/http%3A//bengalimatrimony.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//w3c//dtd html 4.0 transitional//en"><html><head>
    <title>Privacy Statement</title>
