apple.com (archived on 2002-06-04)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;informationtech;shopping",
  "char_count": 8441,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.49,
  "homepage_snapshot_redirected_domain": "apple.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020329093104id_/http://apple.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020329093104id_/http%3A//apple.com",
  "interval": "2002_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "apple.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020604015132id_/http%3A//apple.com/legal/privacy",
  "policy_title": "Apple - Apple Customer Privacy Statement",
  "policy_url": "apple.com/legal/privacy",
  "sha1": "53eb20dd50d61d154b1fd31e0fa2b12548728624",
  "simhash": 6063466978842547709,
  "simhash_updated": false,
  "site_hostname": "apple.com",
  "site_url": "http://apple.com",
  "smog": 14.6,
  "strict_updated": false,
  "timestamp": "20020604015132",
  "word_count": 1355,
  "year": 2002
}

--- a/a/ap/app/apple.com.html
+++ b/a/ap/app/apple.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the apple.com privacy policy that was archived on 2001-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011217213658id_/http%3A//www.apple.com/legal/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the apple.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604015132id_/http%3A//apple.com/legal/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <!-- END HEAD OPEN -->
@@ -205,66 +205,39 @@
 	</tbody></table>
 <!-- START INCLUDED FOOTER -->
 <!-- START FIND FEATURE -->
+<font face="Geneva,Verdana,Arial,Helvetica,sans-serif" size="1" class="G10">
+<br>
+<img width="670" src="http://a772.g.akamai.net/7/772/51/3aecfedc9747b7/www.apple.com/main/elements/singlegraypixel.gif" alt="Gray line" height="1" border="0"><br>
+<br>
 <form method="GET" action="http://search.apple.com/s97is.vts">
-<table width="602" cellpadding="0" cellspacing="0" border="0">
-	<tbody><tr>
-		<td height="20" valign="TOP" align="CENTER"><img width="602" src="http://a772.g.akamai.net/7/772/51/3aecfedc9747b7/www.apple.com/main/elements/singlegraypixel.gif" alt="Gray line" height="1" border="0" align="TOP"></td>
+<input type="hidden" name="Action" value="FilterSearch">
+<input type="hidden" name="ResultTemplate" value="webx3.hts">
+<input type="hidden" name="ServerKey" value="Primary">
+<input type="hidden" name="Collection" value="apple">
+<input type="hidden" name="filter" value="nullflt.hts">
+<input type="hidden" name="SearchPage" value="http://search.apple.com/">
+<table cellspacing="0" cellpadding="2" border="0">
+	<tbody><tr align="CENTER" valign="MIDDLE">
+		<td><input name="queryText" type="text" size="25"></td>
+		<td><input name="SEARCH" type="IMAGE" src="http://a772.g.akamai.net/7/772/51/e1ebb6c3780db4/www.apple.com/main/elements/search.gif" width="58" height="25" border="0" value="Search" alt="Search"></td>
 	</tr>
-	<tr>
-		<td align="center">
-		<table cellspacing="0" cellpadding="0" border="0">
-			<tbody><tr>
-				<td align="CENTER" valign="MIDDLE">
-					<input type="hidden" name="Action" value="FilterSearch">
-					<input type="hidden" name="ResultTemplate" value="webx3.hts">
-					<input type="hidden" name="ServerKey" value="Primary">
-					<input type="hidden" name="filter" value="nullflt.hts">
-					<input type="hidden" name="collname" value="apple">
-					<input type="hidden" name="SearchPage" value="http://search.apple.com/">
-				</td>
-			</tr>
-			<tr>
-				<td align="center" width="250">
-				<table cellspacing="0" cellpadding="2" border="0">
-					<tbody><tr align="CENTER" valign="MIDDLE">
-						<td><input name="queryText" type="text" size="25"></td>
-						<td><input name="SEARCH" type="IMAGE" src="http://a772.g.akamai.net/7/772/51/e1ebb6c3780db4/www.apple.com/main/elements/search.gif" width="58" height="25" border="0" value="Search" alt="Search"></td>
-					</tr>
-					<tr align="CENTER" valign="MIDDLE">
-						<td colspan="2">
-							<font face="Geneva, Verdana, Arial, Helvetica, sans-serif" size="1" class="G10"><a href="/find/sitemap.html">Site Map</a>&nbsp;|&nbsp;<a href="/find/searchtips.html">Search Tips</a><br>
-							&nbsp;<br>
-							&nbsp;<br>
-							</font>
-						</td>
-					</tr>
-				</tbody></table>
-				<table cellspacing="0" cellpadding="0" border="0">
-					<tbody><tr>
-						<td align="CENTER">
-							<font face="Geneva, Verdana, Arial, Helvetica, sans-serif" size="1" class="G10">
-							Visit the Apple Store <a href="/store/">online</a> or at <a href="/retail/">retail</a> locations.<br>1-800-MY-APPLE
-							</font>
-						</td>
-					</tr>
-				</tbody></table>
-				</td>
-			</tr>
-		</tbody></table>
-		<br>
-<!-- END FIND FEATURE -->
-<!-- COPYRIGHT INFORMATION -->
-		<font face="Geneva, Verdana, Arial, Helvetica, sans-serif" size="1" class="G10">
-			<a href="&#10;&#9;/contact/ ">Contact Us</a>&nbsp;|&nbsp;<a href="/legal/privacy/">Privacy Policy</a><br>Copyright © 2001 Apple Computer, Inc. <a href="/legal/">All rights reserved.</a><br>
-		</font>
-		</td>
+	<tr align="CENTER" valign="MIDDLE">
+		<td colspan="2"><font face="Geneva,Verdana,Arial,Helvetica,sans-serif" size="1" class="G10"><a href="http://www.apple.com/find/sitemap.html">Site Map</a>&nbsp;|&nbsp;<a href="http://www.apple.com/find/searchtips.html">Search Tips</a></font></td>
 	</tr>
 </tbody></table>
+<br><br>
+Visit the Apple Store <a href="http://www.apple.com/store/">online</a> or at <a href="http://www.apple.com/retail/">retail</a> locations.<br>
+1-800-MY-APPLE<br>
+<br>
+<!-- END FIND FEATURE -->
+<!-- START COPYRIGHT INFORMATION -->
+<a href="&#10;&#9;/contact/ ">Contact Us</a>&nbsp;|&nbsp;<a href="http://www.apple.com/legal/privacy/">Privacy Policy</a><br>
+Copyright © 2002 Apple Computer, Inc. <a href="http://www.apple.com/legal/">All rights reserved.</a><br>
 </form>
+<br>
+</font>
+<!-- END COPYRIGHT INFORMATION -->
 <!-- END INCLUDED FOOTER -->
-
-
-
 <!-- START CENTER CLOSE -->
 </center>
 <!-- END CENTER CLOSE -->
